--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.1.0",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
